Tables - still pretty whack. Mobile compat

--- a/ebpub/ebpub/templates/accounts/password_change_form.html
+++ b/ebpub/ebpub/templates/accounts/password_change_form.html
@@ -5,26 +5,36 @@
 {% block content %}
 <div id="content">
 	<h1>Reset your password</h1>
-	<form action="" method="POST">
-		{% csrf_token %}
-		{{ form.e.errors }}
-		{{ form.e }}{{ form.h }}
-		<table>
-			<tr>
-				<th><label for="id_password1">Password:</label></th>
-				<td>{{ form.password1.errors }}{{ form.password1 }}</td>
-			</tr>
-			<tr>
-				<th><label for="id_password2">Password (again):</label></th>
-				<td>{{ form.password2.errors }}{{ form.password2 }}</td>
-			</tr>
-			<tr>
-				<th>&nbsp;</th>
-				<td>
-					<button type="submit">Reset the password</button>
-				</td>
-			</tr>
-		</table>
-	</form>
+	<div class="row">
+		<div class="six col">
+			<form action="" method="POST">
+				{% csrf_token %}
+				{{ form.e.errors }}
+				{{ form.e }}{{ form.h }}
+					<div class="row">
+						<div class="four col">
+							<h2>Password</h2>
+						</div>
+						<div class="eight col">
+							{{ form.password1.errors }}{{ form.password1 }}
+						</div>
+					</div>
+					<div class="row">
+						<div class="four col">
+							<h2>Password (again)</h2>
+						</div>
+						<div class="eight col">
+							{{ form.password2.errors }}{{ form.password2 }}
+						</div>
+					</div>
+				<div class="row">
+					<div class="four col offset-by-eight">
+						<button type="submit" style="font-size:20px; width:100%; text-align:center;">Reset your password</button>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="six col"> &nbsp; </div>
+	</div>
 </div>
 {% endblock %}
