Mobile compat, no tables

--- a/ebpub/ebpub/templates/accounts/request_password_change_form.html
+++ b/ebpub/ebpub/templates/accounts/request_password_change_form.html
@@ -8,21 +8,26 @@
 	<h1>Request a password reset</h1>
 	<h2>Step 1: Enter your e-mail address</h2>
 	<p>We'll e-mail you a secret link that lets you reset your password.</p>
-
+<div class="row">
+	<div class="six col">
 	<form action="{% url accounts-pw-change %}" method="POST">
 		{% csrf_token %}
-		<table>
-			<tr>
-				<th><label for="id_email">E-mail address:</label></th>
-				<td>{{ form.email.errors }}{{ form.email }}</td>
-			</tr>
-			<tr>
-				<th>&nbsp;</th>
-				<td>
-					<button type="submit">Request password reset</button>
-				</td>
-			</tr>
-		</table>
+		<div class="row">
+			<div class="four col">
+				<h2>E-mail address:</h2>
+			</div>
+			<div class="eight col">
+				{{ form.email.errors }}{{ form.email }}
+			</div>
+		</div>
+		<div class="row">
+			<div class="four col offset-by-eight">
+				<button type="submit" style="font-size:20px; width:100%; text-align:center;">Request Password Reset</button>
+			</div>
+		</div>
 	</form>
+	</div>
+	<div class="six col"> &nbsp; </div>
+</div>
 </div>
 {% endblock %}
